nivasa-macros/tests/trybuild/controller_duplicate_version.rs
use nivasa_macros::controller;

#[controller({ path: "/users", version: "1", version: "2" })]
struct UsersController;

fn main() {}
